part3/Exercise_3.02/pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpongservice
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - port: 567
      protocol: TCP
      targetPort: 3011
